# aircraft_manager

aircraft_manager/: pyproject.toml
aircraft_manager/src/: main.py  repository.py  schemas.py
aircraft_manager/src/alembic/: env.py
aircraft_manager/src/config/: database.py
aircraft_manager/src/router/: api.py
aircraft_manager/src/tests/: conftest.py  test_api.py  test_performance.py
aircraft_manager/src/use_cases/: performance.py
aircraft_manager/src/utils/: init_db.py
aircraft_manager/tests/: conftest.py  test_api.py  test_performance.py
